fix padding on mobile

--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -10,6 +10,7 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-top: 80px;
 }
 
 .text {
